--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,7 +1,7 @@
 # https://github.com/catppuccin/alacritty?tab=readme-ov-file
 # import = ["~/.config/alacritty/catppuccin-mocha.toml"]
-import = ["~/.config/alacritty/rooprob-catppuccin-macchiato.toml"]
-# import = ["~/.config/alacritty/falcon.toml"]
+# import = ["~/.config/alacritty/rooprob-catppuccin-macchiato.toml"]
+import = ["~/.config/alacritty/falcon.toml"]
 
 [font]
 size = 9
