--- a/alacritty/falcon.toml
+++ b/alacritty/falcon.toml
@@ -25,5 +25,6 @@ white = "0xb4b4b9"
 yellow = "0xffc552"
 
 [colors.primary]
-background = "0x020221"
+# background = "0x020221"
+background = "0x010220"
 foreground = "0xb4b4b9"
