--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,4 +1,5 @@
-set-option -sa terminal-overrides ",xterm*:Tc"
+
+
 set -g mouse on
 
 
@@ -24,7 +25,14 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
+set -g @plugin 'rooprob/falcon-tmux'
+# run '~/.config/tmux/plugins/falcon-tmux/falcon.tmux'
 
+#set -g default-terminal "xterm-256color"
+#set-option -ga terminal-overrides ",alacritty,xterm-256color:Tc"
+# https://github.com/alacritty/alacritty/issues/109
+set  -g default-terminal "tmux-256color"
+set -ag terminal-overrides ",alacritty:RGB"
 
 run '~/.config/tmux/plugins/tpm/tpm'
