--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -11,6 +11,8 @@ bind C-b send-prefix
 
 bind -n M-N previous-window
 bind -n M-M next-window
+bind -n M-[ previous-window
+bind -n M-] next-window
 
 set -g base-index 1
 set -g pane-base-index 1
