--- a/alacritty/Alacritty.desktop
+++ b/alacritty/Alacritty.desktop
@@ -13,6 +13,8 @@ StartupNotify=true
 StartupWMClass=Alacritty
 Actions=New;
 
+X-Desktop-File-Install-Version=0.26
+
 [Desktop Action New]
 Name=New Terminal
 Exec=alacritty
