--- a/sway/config
+++ b/sway/config
@@ -3,7 +3,7 @@
 include $HOME/.config/sway/themes.d/falcon.conf
 
 # Logo key. Use Mod1 for Alt.
-set $mod Mod1
+set $mod Mod4
 
 # Home row direction keys, like vim
 set $left  h
@@ -52,7 +52,8 @@ set $lock swaylock -f -c "$bg"
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 
-input "1:1:AT_Translated_Set_2_keyboard" {
+# input "1:1:AT_Translated_Set_2_keyboard" {
+input "type:keyboard" {
   xkb_layout us
   # Capslock key should work as escape key
   # See /usr/share/X11/xkb/rules/xorg.lst for options
@@ -113,134 +114,79 @@ input type:touchpad {
 #
 # Moving around:
 #
-  # Move your focus around
-  bindsym $mod+$left focus left
-  bindsym $mod+$down focus down
-  bindsym $mod+$up focus up
-  bindsym $mod+$right focus right
-  # Or use $mod+[up|down|left|right]
-  bindsym $mod+Left focus left
-  bindsym $mod+Down focus down
-  bindsym $mod+Up focus up
-  bindsym $mod+Right focus right
+bindsym $mod+$left exec papersway-msg focus left
+bindsym $mod+$down focus down
+bindsym $mod+$up focus up
+bindsym $mod+$right exec papersway-msg focus right
 
-  # Move the focused window with the same, but add Shift
-  bindsym $mod+Shift+$left move left
-  bindsym $mod+Shift+$down move down
-  bindsym $mod+Shift+$up move up
-  bindsym $mod+Shift+$right move right
-  # Ditto, with arrow keys
-  bindsym $mod+Shift+Left move left
-  bindsym $mod+Shift+Down move down
-  bindsym $mod+Shift+Up move up
-  bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+$left exec papersway-msg move left
+bindsym $mod+Shift+$down move down
+bindsym $mod+Shift+$up move up
+bindsym $mod+Shift+$right move exec papersway-msg right
 
-#
+bindsym $mod+f exec papersway-msg monocle toggle
+bindsym $mod+o exec papersway-msg other column
+
+bindsym $mod+a exec papersway-msg fresh-workspace
+bindsym $mod+n exec papersway-msg fresh-workspace send
+bindsym $mod+t exec papersway-msg fresh-workspace take
+
+bindsym $mod+e exec papersway-msg absorb_expel left
+bindsym $mod+r exec papersway-msg absorb_expel right
+
+bindsym $mod+minus exec papersway-msg cols decr
+bindsym $mod+equal exec papersway-msg cols incr
+
+bindsym $mod+u exec papersway-msg workspace prev
+bindsym $mod+i exec papersway-msg workspace next
+bindsym $mod+Shift+u exec papersway-msg move_workspace prev
+bindsym $mod+Shift+i exec papersway-msg move_workspace next
+
+#bindsym $mod+c [con_mark=caffeinated] inhibit_idle none; \
+#    inhibit_idle open, mark caffeinated
+#bindsym $mod+Shift+c [con_mark=caffeinated] inhibit_idle none, \
+#    mark --toggle caffeinated
+#for_window [con_mark=caffeinated] inhibit_idle opene
+
 # Workspaces:
-#
-  # Switch to workspace
-  bindsym $mod+1 workspace number 1
-  bindsym $mod+2 workspace number 2
-  bindsym $mod+3 workspace number 3
-  bindsym $mod+4 workspace number 4
-  bindsym $mod+5 workspace number 5
-  bindsym $mod+6 workspace number 6
-  bindsym $mod+7 workspace number 7
-  bindsym $mod+8 workspace number 8
-  bindsym $mod+9 workspace number 9
-  bindsym $mod+0 workspace number 10
-  # Move focused container to workspace
-  bindsym $mod+Shift+1 move container to workspace number 1
-  bindsym $mod+Shift+2 move container to workspace number 2
-  bindsym $mod+Shift+3 move container to workspace number 3
-  bindsym $mod+Shift+4 move container to workspace number 4
-  bindsym $mod+Shift+5 move container to workspace number 5
-  bindsym $mod+Shift+6 move container to workspace number 6
-  bindsym $mod+Shift+7 move container to workspace number 7
-  bindsym $mod+Shift+8 move container to workspace number 8
-  bindsym $mod+Shift+9 move container to workspace number 9
-  bindsym $mod+Shift+0 move container to workspace number 10
-  # Note: workspaces can have any name you want, not just numbers.
-  # We just use 1-10 as the default.
 
-#
-# Layout stuff:
-#
-  # You can "split" the current object of your focus with
-  # $mod+b or $mod+v, for horizontal and vertical splits
-  # respectively.
-  bindsym $mod+b splith
-  bindsym $mod+v splitv
-
-  # Switch the current container between different layout styles
-  bindsym $mod+s layout stacking
-  bindsym $mod+w layout tabbed
-  bindsym $mod+e layout toggle split
-
-  # Make the current focus fullscreen
-  bindsym $mod+f fullscreen
-
-  # Toggle the current focus between tiling and floating mode
-  bindsym $mod+Shift+t floating toggle
-
-  # Swap focus between the tiling area and the floating area
-  bindsym $mod+t focus mode_toggle
-
-  # Move focus to the parent container
-  bindsym $mod+a focus parent
-
-#
-# Scratchpad:
-#
-  # Sway has a "scratchpad", which is a bag of holding for windows.
-  # You can send windows there and get them back later.
-
-  # Move the currently focused window to the scratchpad
-  bindsym $mod+Shift+minus move scratchpad
-
-  # Show the next scratchpad window or hide the focused scratchpad window.
-  # If there are multiple scratchpad windows, this command cycles through them.
-  bindsym $mod+minus scratchpad show
-
-#
-# Resizing containers:
-#
-mode "resize" {
-  # left will shrink the containers width
-  # right will grow the containers width
-  # up will shrink the containers height
-  # down will grow the containers height
-  bindsym $left resize shrink width 10px
-  bindsym $down resize grow height 10px
-  bindsym $up resize shrink height 10px
-  bindsym $right resize grow width 10px
-
-  # Ditto, with arrow keys
-  bindsym Left resize shrink width 10px
-  bindsym Down resize grow height 10px
-  bindsym Up resize shrink height 10px
-  bindsym Right resize grow width 10px
-
-  # Return to default mode
-  bindsym Return mode "default"
-  bindsym Escape mode "default"
-}
-  bindsym $mod+r mode "resize"
+# Switch to workspace
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
+bindsym $mod+0 workspace number 10
+# Move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
+bindsym $mod+Shift+0 move container to workspace number 10
 
 #
 # Clipboard:
 #
-  bindsym $mod+Shift+v exec copyq toggle
+bindsym $mod+Shift+v exec copyq toggle
 
 #
 # Screenshots:
 #
-  # Current window
-  bindsym print exec wayshot
-  # Select area
-  bindsym $mod+print exec wayshot -a
-  # Current output
-  bindsym $mod+Shift+print exec wayshot -o
+# Current window
+bindsym print exec wayshot
+# Select area
+bindsym $mod+print exec wayshot -a
+# Current output
+bindsym $mod+Shift+print exec wayshot -o
 
 
 ### Status Bar
@@ -250,7 +196,8 @@ bar {
     position top
 
     swaybar_command swaybar
-    status_command i3blocks
+    # status_command i3blocks
+    status_command papersway --i3status
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     #status_command while date +'%Y-%m-%dT%H:%M:%S'; do sleep 1; done
