--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,4 +1,3 @@
-import = ["~/.config/alacritty/falcon.toml"]
 
 [font]
 size = 11
@@ -12,3 +11,6 @@ family = "BlexMono Nerd Font Mono"
 [window.padding]
 x = 7
 y = 0
+
+[general]
+import = ["~/.config/alacritty/falcon.toml"]
