mute the red a touch

--- a/alacritty/falcon.toml
+++ b/alacritty/falcon.toml
@@ -20,7 +20,8 @@ blue = "0x635196"
 cyan = "0x34bfa4"
 green = "0x859933"
 magenta = "0xff761a"
-red = "0xff3600"
+#red = "0xff3600"
+red = "0xff8e78"
 white = "0xb4b4b9"
 yellow = "0xffc552"
 
