--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,4 @@
-
-
 set -g mouse on
-
 
 # set space as prefix
 unbind C-b
@@ -9,10 +6,8 @@ unbind C-Space
 set -g prefix C-b
 bind C-b send-prefix
 
-bind -n M-N previous-window
-bind -n M-M next-window
-bind -n M-[ previous-window
-bind -n M-] next-window
+bind -n C-[ previous-window
+bind -n C-] next-window
 
 set -g base-index 1
 set -g pane-base-index 1
@@ -27,12 +22,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'christoomey/vim-tmux-navigator'
-# set -g @plugin 'dreamsofcode-io/catppuccin-tmux'
-set -g @plugin 'rooprob/falcon-tmux'
-# run '~/.config/tmux/plugins/falcon-tmux/falcon.tmux'
 
-#set -g default-terminal "xterm-256color"
-#set-option -ga terminal-overrides ",alacritty,xterm-256color:Tc"
+# set -g @plugin 'rooprob/falcon-tmux'
+run '~/.config/tmux/plugins/falcon-tmux/falcon.tmux'
+
 # https://github.com/alacritty/alacritty/issues/109
 set  -g default-terminal "tmux-256color"
 set -ag terminal-overrides ",alacritty:RGB"
