--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -6,8 +6,11 @@ unbind C-Space
 set -g prefix C-b
 bind C-b send-prefix
 
+#bind -n M-N previous-window
+#bind -n M-M next-window
 bind -n C-[ previous-window
 bind -n C-] next-window
+set -s escape-time 50
 
 set -g base-index 1
 set -g pane-base-index 1
